jvm 引用